# mercurylayer

./: .gitignore  Cargo.toml  Makefile.am  README.md  Rocket.toml  Rocket2.toml  Usage.md  build_compose_hw_run.sh  disclosure.md  docker-compose-hw.yml  docker-compose-sim.yml  docker-compose-test.yml  docker-compose.yml  entrypoint.sh  mercury-server-deployment.yaml  mercury-server-service.yaml  nginx-deployment.yaml  nginx-service.yaml  token-server-deployment.yaml  token-server-service.yaml
.github/workflows/: build.yml  ci.yaml  tests.yml
client/: .gitignore  Cargo.toml  README.md  Settings.toml  wallet.db
client-nodejs/: broadcast_backup_tx.js  deposit.js  index.js  package-lock.json  package.json  sqlite_manager.js  transaction.js  transfer_receive.js  transfer_send.js  utils.js  wallet.js  withdraw.js
client-rust/: Cargo.toml  Settings.toml
client/config/: Settings.toml
client/migrations/: 0001_signer_data_table.sql
client/src/: client_config.rs  deposit.rs  electrum.rs  error.rs  key_derivation.rs  main.rs  send_backup.rs  transaction.rs  transfer_receiver.rs  transfer_sender.rs  utils.rs  wallet.rs  withdraw.rs
client/src/client_config/: mod.rs
client/src/client_config/sqilte_manager/: common.rs  deposit.rs  mod.rs  transaction.rs  transfer_sender.rs  withdraw.rs
client/src/deposit/: db.rs  mod.rs
client/src/ecdsa/: keygen.rs
client/src/key_derivation/: db.rs  mod.rs
client/src/keystore/: key_path.rs  key_path_with_addresses.rs  mod.rs
client/src/state_entity/: api.rs  deposit.rs  mod.rs
client/src/transaction/: db.rs  mod.rs
client/src/transfer_receiver/: db.rs  mod.rs
client/src/transfer_sender/: db.rs  mod.rs
client/src/utils/: client_shim.rs  error.rs  helpers.rs  mod.rs  requests.rs  settings.rs
client/src/wallet/: mod.rs  shared_key.rs  wallet.rs
client/src/withdraw/: db.rs  mod.rs
clients/rust/: Cargo.toml  Settings.toml
clients/rust/src/: broadcast_backup_tx.rs  client_config.rs  coin_status.rs  deposit.rs  main.rs  sqlite_manager.rs  transaction.rs  transfer_receiver.rs  transfer_sender.rs  utils.rs  wallet.rs  withdraw.rs
clients/tests/rust/: Cargo.toml  regtest.Settings.toml
clients/tests/rust/src/: bitcoin_core.rs  electrs.rs  main.rs  ta01_sign_second_not_called.rs  ta02_duplicate_deposits.rs  ta02_multiple_deposits.rs  ta02_multiple_deposits_same_addr.rs  tb01_simple_transfer.rs  tb02_transfer_address_reuse.rs  tb03_simple_atomic_transfer.rs  tb04_simple_lightning_latch.rs  tm01_sender_double_spends.rs  tv05.rs
docs/: README.md  atomic_transfer.md  blind_musig.md  client_guide.md  deposit_sequence.md  openapi.yaml  protocol.md  server_db.md  swap_protocol.md  test_cases.md  testnet_guide.md  tokens.md  transfer_receiver_sequence.md  transfer_sender_sequence.md  wasm.md  withdraw_sequence.md
enclave/: .gitignore  Makefile  README.md  Settings.toml
examples/: blinded_musig_2_of_2.c  blinded_musig_n_of_n.c  keyaggcoef_1_musig.c
explorer/: Dockerfile  index.html  main.js  nginx.conf
include/: secp256k1_musig.h
keylistCron/: Dockerfile  crontab.txt  send_commitment.sh
lib/: Cargo.toml  build_kotlin_lib.sh  modify_kt_file.sh  modify_kt_file.sh1  modify_kt_file.sh2  uniffi.toml
lib/modify_sh/: modify_all.sh  modify_deposit_msg1.sh  modify_deposit_msg_response.sh  modify_get_msg_addr_response_payload.sh  modify_key_update_response_payload.sh  modify_kt_file.sh  modify_partial_signature_request_payload.sh  modify_partial_signature_response_payload.sh  modify_sign_first_request_payload.sh  modify_sign_first_response_payload.sh  modify_statechainInfo_response_payload.sh  modify_statechain_info.sh  modify_token.sh  modify_transfer_receiver_error.sh  modify_transfer_receiver_get_response_payload.sh  modify_transfer_receiver_post_response_payload.sh  modify_transfer_receiver_request_payload.sh  modify_transfer_receiver_response_payload.sh  modify_transfer_sender_request_payload.sh  modify_transfer_unlock_request_payload.sh  modify_transfer_update_msg_request_payload.sh  modify_withdraw_complete_payload.sh
lib/out-kotlin/com/mercurylayer/: mercurylib.kt  mercurylib2.kt
lib/out-python/: mercurylib.py
lib/src/: error.rs  lib.rs  transaction.rs  unifii_interface.rs  utils.rs  wallet.rs  withdraw.rs
lib/src/deposit/: mod.rs
lib/src/sign/: mod.rs
lib/src/transfer/: mod.rs  receiver.rs  sender.rs
lib/src/wallet/: activity.rs  backup_tx.rs  coin.rs  coin_status.rs  cpfp_tx.rs  key_derivation.rs  mod.rs  settings.rs  statechain_backup_txs.rs  token.rs
lib/src/withdraw/: mod.rs
lnd_docker/: docker-compose.yml
new-client/: Cargo.toml  wallet.db  wallet.db-shm  wallet.db-wal
server/: .env  .env_example  Cargo.toml  Dockerfile  README.md  Rocket.toml  Settings.toml
server/migrations/: 0001_key_data_table.sql
server/migrations/2023-07-04-012013_create_user_session/: down.sql  up.sql
server/migrations/2023-07-04-012923_create_lockbox_table/: down.sql  up.sql
server/src/: config.rs  error.rs  main.rs  schema.rs  server.rs  server_config.rs
server/src/database/: deposit.rs  lightning_latch.rs  mod.rs  sign.rs  transfer.rs  transfer_receiver.rs  transfer_sender.rs  utils.rs
server/src/endpoints/: close.rs  deposit.rs  init.rs  lightning_latch.rs  mod.rs  sign.rs  transfer.rs  transfer_receiver.rs  transfer_sender.rs  util.rs  utils.rs  withdraw.rs
server/src/protocol/: deposit.rs  mod.rs  util.rs
server/src/storage/: db.rs
shared/: Cargo.toml
shared/src/: lib.rs  structs.rs  util.rs
token-server/: .env_example  Cargo.toml  Dockerfile  README.md  Settings.toml  tnc.html
wasm/: Cargo.toml  README.md  build_pkgs.sh  index.html  index.js  wallet_schema.md
wasm/node_pkg/: README.md
wasm/node_pkg/debug/: mercury_wasm.d.ts  mercury_wasm.js  mercury_wasm_bg.wasm.d.ts
wasm/node_pkg/release/: mercury_wasm.d.ts  mercury_wasm.js  mercury_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
wasm/web_pkg/: README.md
wasm/web_pkg/debug/: mercury_wasm.d.ts  mercury_wasm.js  mercury_wasm_bg.wasm.d.ts
wasm/web_pkg/release/: mercury_wasm.d.ts  mercury_wasm.js  mercury_wasm_bg.wasm.d.ts
(+526 files in other folders)
