[package]
name = "mercury-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.1", features = ["serde", "base64", "rand-std", "std", "bitcoinconsensus"], default-features = false }
bip39 = "1.2.0"
bech32 = { version = "0.9.1", default-features = false }
electrum-client = "0.18.0"
reqwest = { version = "0.11.16", features = ["blocking", "json", "socks"] }
tokio = { version = "1.27.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "time", "uuid" ] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
schemars = { version = "0.8.12", features = ["chrono", "uuid"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
clap = { version = "4.2.5", features = ["derive"]}
rand = "0.8.5"
hex = "0.4.3"
secp256k1-zkp = { git = "https://github.com/ssantos21/rust-secp256k1-zkp.git", branch = "blinded-musig-scheme", features = [ "rand-std", "bitcoin_hashes", "std" ] }