[package]
name = "mercurylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.1", features = ["serde", "base64", "rand-std", "std"], default-features = false }
bip39 = "1.2.0"
bech32 = { version = "0.9.1", default-features = false }
# TODO: Cannot update Cargo because it will get once_cell 1.19.0 and will break the ecies dependency
#       When version 0.27.0 is released, update the ecies dependency to use it
ecies = {version = "0.2.6", default-features = false, features = ["pure"]}
hex = "0.4.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
secp256k1-zkp = { git = "https://github.com/ssantos21/rust-secp256k1-zkp.git", branch = "blinded-musig-scheme", features = [ "rand-std", "bitcoin_hashes", "std" ] }
anyhow = "1.0"
