[package]
name = "mercury-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.1", features = ["serde", "base64", "rand-std", "std"], default-features = false }
config = "0.13.1"
reqwest = { version = "0.11.16", features = ["blocking", "json", "socks"] }
rocket = { version = "0.5.0-rc", features = ["json"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "time", "uuid" ] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
schemars = { version = "0.8.12", features = ["chrono", "uuid"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
rand = "0.8.5"
hex = "0.4.3"
secp256k1-zkp = { git = "https://github.com/ssantos21/rust-secp256k1-zkp.git", branch = "blinded-musig-scheme", features = [ "rand-std", "bitcoin_hashes", "std" ] }
# secp256k1-zkp = { path = "../ss-rust-secp256k1-zkp", features = [ "rand-std", "bitcoin_hashes", "std" ] }