[package]
name = "client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bech32 = { version = "0.9.1", default-features = false }
bitcoin = { version = "0.30.1", features = ["serde", "base64", "rand-std", "std", "bitcoinconsensus"], default-features = false }
bip39 = "1.2.0"
clap = { version = "4.2.5", features = ["derive"]}
chrono = "0.4.31"
config = "0.13.1"
electrum-client = "0.18.0"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["blocking", "json", "socks"] }
schemars = { version = "0.8.12", features = ["chrono", "uuid"] }
secp256k1-zkp = { git = "https://github.com/ssantos21/rust-secp256k1-zkp.git", branch = "blinded-musig-scheme", features = [ "rand-std", "bitcoin_hashes", "std" ] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "time", "uuid" ] }
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
mercurylib = { path = "../../lib" }
